# lstm-autoencoder-spark-kafka

./: .gitignore  Dockerfile.app  README.md  STRIIM_LSTMAE.md  TECHNICAL.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  anomaly_scorer.py  attention.py  base_detector.py  compare_models.py  credit_card_preprocessor.py  data_preprocessor.py  evaluate.py  evaluate_decision_logic.py  evaluate_fcvae.py  evaluate_transactions.py  fcvae_augment.py  fcvae_model.py  fcvae_registry.py  fcvae_scorer.py  fcvae_streaming_detector.py  feedforward_autoencoder.py  isolation_forest_detector.py  lstm_autoencoder.py  main.py  mlp_classifier.py  model_registry.py  optimize_hyperparameters.py  optimize_hyperparams.py  optimize_quick.py  optimize_split.py  plot_decision_logic_fps.py  pyproject.toml  streaming_detector.py  synthetic_anomaly.py  train.py  train_credit_card_autoencoder.py  train_fcvae.py  train_mlp_classifier.py  train_transactions.py  transaction_config.py  transaction_preprocessor.py
code/: 0_bootstrap.py  0_verify_setup.py  1_data_exploration.ipynb  1_data_ingest.py  1_train_model.py  2_data_exploration.ipynb  2_evaluate_model.py  2_model_design.ipynb  3_model_design.ipynb  3_streaming_app.py  4_grid_sweep.py  4_train_model.py  5_evaluate_model.py  5_streaming_app.py  6_streaming_app.py  7_optimize.py
data/: generate_transactions_v2.py  nyc_taxi_sunday_aligned.csv
evaluation/: evaluation_results.pkl
models/: lstm_model.pt  preprocessor_config.pkl  scaler.pkl  scorer.pkl  training_history.pkl
models/fcvae_60_kl/: registry_config.pkl
models/fcvae_60_kl/Accel_CMP/: history.pkl  model.pt  scaler.pkl  scorer.pkl
models/fcvae_60_kl/Accel_nopin/: history.pkl  model.pt  scaler.pkl  scorer.pkl
models/fcvae_60_kl/Star_CMP/: history.pkl  model.pt  scaler.pkl  scorer.pkl
models/fcvae_60_kl/Star_nopin/: history.pkl  model.pt  scaler.pkl  scorer.pkl
notebooks/: model_design.ipynb
producer/: producer.py  pyproject.toml
src/: model.py  preprocess.py  scorer.py  synthetic.py  training.py
striim/: LSTMAE.tql  NYCAD.tql
striim/api/: main.py  requirements.txt
striim/lstm-ae-score-caller/: build.sh  pom.xml
striim/nycad-scorer/: build.sh  pom.xml
(+4 files in other folders)
