[project]
name = "lstm-autoencoder-spark-kafka"
version = "0.1.0"
description = "LSTM Autoencoder anomaly detection with Spark Streaming and Kafka"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "confluent-kafka>=2.3.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "pyspark==3.5.3",
    "matplotlib>=3.10.8",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    # jsonschema (transitive via jupyter) tries to use rfc3987 for URI format
    # validation. If it isn't installed, jsonschema falls back to rfc3987_syntax
    # which compiles a Lark grammar at import time and takes ~minutes, hanging
    # `jupyter notebook` startup. Pinning rfc3987 here forces the fast path.
    "rfc3987>=1.3.8",
    # FastAPI scoring service used by striim/api/main.py for the Striim
    # Open Processor integration.
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
