[project]
name = "anomaly-detection-app"
version = "0.1.0"
description = "Real-time anomaly detection dashboard with Spark and Dash"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "pyspark==3.5.3",
    "confluent-kafka>=2.3.0",
]
